--- a/.env.local.template
+++ b/.env.local.template
@@ -2,4 +2,6 @@
 
 # Gemini API Configuration
 # Get your API key from: https://ai.google.dev/
-API_KEY=your_gemini_api_key_here
+# API keys should start with 'AIza...'
+# Note: Vite requires VITE_ prefix for client-side env vars
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
